# Marketing_mix_tool

mmx-tool/: README.md  mmx_results_exploration.ipynb  pyproject.toml
mmx-tool/Data/02_intermediate/: clean_mmm_data.parquet
mmx-tool/Data/03_primary/: feature_mmm_data.parquet
mmx-tool/Data/07_model_output/: channel_contribution.parquet  npi_random_effects.parquet  validation_predictions.parquet
mmx-tool/Data/08_reporting/: budget_comparison.csv  marginal_roi.csv  model_metrics.csv  model_results.csv  optimized_budget.csv  roi_table.csv
mmx-tool/Data/Raw/: 20260106_MMx_Master_Universe_v0.01sj.csv
mmx-tool/conf/base/: catalog.yml  parameters.yml
mmx-tool/src/mmx_tool/: __init__.py  __main__.py  pipeline_registry.py  settings.py
mmx-tool/src/mmx_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mmx-tool/src/mmx_tool/pipelines/: __init__.py
mmx-tool/src/mmx_tool/pipelines/Feature_enginerring/: node.py
mmx-tool/src/mmx_tool/pipelines/Modelling/: node.py
mmx-tool/src/mmx_tool/pipelines/data_engineering/: node.py  pipeline.py
mmx-tool/src/mmx_tool/pipelines/feature_engineering/: node.py  pipeline.py
mmx-tool/src/mmx_tool/pipelines/modeling/: node.py  pipeline.py
mmx-tool/src/mmx_tool/pipelines/npi_analysis/: node.py  pipeline.py
mmx-tool/src/mmx_tool/pipelines/optimization/: node.py  pipeline.py
mmx-tool/src/mmx_tool/pipelines/roi/: node.py  pipeline.py
mmx-tool/streamlit_app/: utils.py
mmx-tool/streamlit_app/pages/: 1_Model_Quality.py  2_Marketing_Mix.py  3_ROI_Optimization.py  4_NPI_Insights.py
