[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "mmx_tool"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
mmx-tool = "mmx_tool.__main__:main"

[tool.kedro]
package_name = "mmx_tool"
project_name = "MMx_Tool"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "mmx_tool.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
